--- a/chapter5-postprocess.tex
+++ b/chapter5-postprocess.tex
@@ -11,6 +11,6 @@
 \section{OFAIR}
     % \input chapter5-ofair.tex
     
-\section{SCRUF}
+\section{Social Choice for Re-ranking Under Fairness (SCRUF): Dynamic Lotteries for Multi-group Fairness-Aware Recommendation}
     \input chapter5-dynamicfair.tex
 %     (provider fairness)
