--- a/refs.bib
+++ b/refs.bib
@@ -1103,6 +1103,36 @@ url = {http://EconPapers.repec.org/RePEc:net:wpaper:0710}
   publisher={Random House, Inc.}
 }
 
+@article{JENQ2015234,
+title = {Beauty, weight, and skin color in charitable giving},
+journal = {Journal of Economic Behavior & Organization},
+volume = {119},
+pages = {234-253},
+year = {2015},
+issn = {0167-2681},
+doi = {https://doi.org/10.1016/j.jebo.2015.06.004},
+url = {https://www.sciencedirect.com/science/article/pii/S0167268115001675},
+author = {Christina Jenq and Jessica Pan and Walter Theseira},
+keywords = {Charitable giving, Microfinance lending, Statistical discrimination, Implicit bias, Peer-to-peer lending}
+}
+
+
+@article{HONG2016777,
+title = {Political polarization on twitter: Implications for the use of social media in digital governments},
+journal = {Government Information Quarterly},
+volume = {33},
+number = {4},
+pages = {777-782},
+year = {2016},
+issn = {0740-624X},
+doi = {https://doi.org/10.1016/j.giq.2016.04.007},
+url = {https://www.sciencedirect.com/science/article/pii/S0740624X16300375},
+author = {Sounman Hong and Sun Hyoung Kim},
+}
+
+
+
+
 @article{pierrakos2003web,
   title={{Web usage mining as a tool for personalization: A survey}},
   author={Pierrakos, D. and Paliouras, G. and Papatheodorou, C. and Spyropoulos, C.D.},
@@ -2672,16 +2702,13 @@ series = {FAT* '20}
 }
 
 @book{DBLP:series/synthesis/2012Sun,
-  author    = {Yizhou Sun and
-               Jiawei Han},
-  title     = {Mining Heterogeneous Information Networks: Principles and
-               Methodologies},
-  booktitle = {Mining Heterogeneous Information Networks: Principles and
-               Methodologies},
+  author = {Yizhou Sun and Jiawei Han},
+  title = {Mining Heterogeneous Information Networks: Principles and Methodologies},
+  booktitle = {Mining Heterogeneous Information Networks: Principles and Methodologies},
   publisher = {Morgan {\&} Claypool Publishers},
-  series    = {Synthesis Lectures on Data Mining and Knowledge Discovery},
-  year      = {2012},
-  ee        = {http://dx.doi.org/10.2200/S00433ED1V01Y201207DMK005},
+  series = {Synthesis Lectures on Data Mining and Knowledge Discovery},
+  year = {2012},
+  ee = {http://dx.doi.org/10.2200/S00433ED1V01Y201207DMK005},
   bibsource = {DBLP, http://dblp.uni-trier.de}
 }
 
@@ -3232,10 +3259,10 @@ ISSN={1083-4427},}
 }
 
 @article{sonboli2020dynm,
-  title={''And the Winner Is...'': Dynamic Lotteries for Multi-group Fairness-Aware Recommendation},
+  title={``And the Winner Is...``: Dynamic Lotteries for Multi-group Fairness-Aware Recommendation},
   author={Sonboli, Nasim and Burke, Robin and Mattei, Nicholas and Eskandanian, Farzad and Gao, Tian},
   journal={arXiv preprint arXiv:2009.02590},
-  year={2020}
+  year={2020},
   booktitle={3rd FAccTRec Workshop: Responsible Recommendation in conjunction with the 14th ACM Conference on Recommender Systems (RecSys 2020)}
 }
 
@@ -3250,6 +3277,20 @@ url = {https://doi.org/10.1145/3450613.3456835},
 booktitle = {Proceedings of the 29th ACM Conference on User Modeling, Adaptation and Personalization},
 pages = {274–279},
 numpages = {6}
+}
+
+
+@inbook{holstein2019improving,
+author = {Holstein, Kenneth and Wortman Vaughan, Jennifer and Daum\'{e}, Hal and Dudik, Miro and Wallach, Hanna},
+title = {Improving Fairness in Machine Learning Systems: What Do Industry Practitioners Need?},
+year = {2019},
+isbn = {9781450359702},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3290605.3300830},
+booktitle = {Proceedings of the 2019 CHI Conference on Human Factors in Computing Systems},
+pages = {1–16},
+numpages = {16}
 }
 
 @inproceedings{DBLP:conf/sac/Castro-HerreraDCM09,
@@ -3550,14 +3591,25 @@ numpages = {6}
   publisher={ACM}
 }
 
-@incollection{masthoff2011group,
-  title={Group recommender systems: Combining individual models},
-  author={Masthoff, Judith},
-  booktitle={Recommender systems handbook},
-  pages={677--702},
-  year={2011},
-  publisher={Springer}
+
+@Inbook{masthoff2011group,
+author="Masthoff, Judith",
+editor="Ricci, Francesco
+and Rokach, Lior
+and Shapira, Bracha
+and Kantor, Paul B.",
+title="Group Recommender Systems: Combining Individual Models",
+bookTitle="Recommender Systems Handbook",
+year="2011",
+publisher="Springer US",
+address="Boston, MA",
+pages="677--702",
+isbn="978-0-387-85820-3",
+doi="10.1007/978-0-387-85820-3_21",
+url="https://doi.org/10.1007/978-0-387-85820-3_21"
 }
+
+
 @article{healthrecsys,
   title={Health recommender systems: concepts, requirements, technical basics and challenges},
   author={Wiesner, Martin and Pfeifer, Daniel},
@@ -4394,6 +4446,8 @@ archivePrefix = {arXiv},
 }
 
 
+
+
 @inproceedings{akoglu_valuepick:_2010,
     address={Sydney, NSW, Australia},
 	title = {Valuepick: {Towards} a value-oriented dual-goal recommender system},
@@ -4449,6 +4503,13 @@ archivePrefix = {arXiv},
 archivePrefix = {arXiv},
        eprint = {1809.02921},
  primaryClass = {cs.IR}
+}
+
+@article{chen2018fair,
+  title={Fair lending needs explainable models for responsible recommendation},
+  author={Chen, Jiahao},
+  journal={arXiv preprint arXiv:1809.04684},
+  year={2018}
 }
 
 @inproceedings{liu2019personalized,
@@ -5161,14 +5222,6 @@ series = {KDD '19}
   publisher={Transaction Publishers}
 }
 
-@inproceedings{Dwork12:Fairness,
-  title={Fairness through awareness},
-  author={Dwork, Cynthia and Hardt, Moritz and Pitassi, Toniann and Reingold, Omer and Zemel, Richard},
-  booktitle={Proceedings of the 3rd Innovations in Theoretical Computer Science Conference},
-  pages={214--226},
-  year={2012},
-  organization={ACM}
-}
 
 @Book{Rawls:Justice,
   Title                    = {A Theory of Justice},
@@ -5267,14 +5320,7 @@ series = {KDD '19}
   publisher={Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New Rochelle, NY 10801 USA}
 }
 
-@inproceedings{dwork2012fairness,
-  title={Fairness through awareness},
-  author={Dwork, Cynthia and Hardt, Moritz and Pitassi, Toniann and Reingold, Omer and Zemel, Richard},
-  booktitle={Proceedings of the 3rd Innovations in Theoretical Computer Science Conference},
-  pages={214--226},
-  year={2012},
-  organization={ACM}
-}
+
 
 @inproceedings{kamishima2012enhancement,
   title={Enhancement of the Neutrality in Recommendation.},
@@ -5894,3 +5940,197 @@ url="https://doi.org/10.1007/978-0-387-85820-3_4"
   doi={10.1109/MC.2009.263},
   publisher={IEEE}}
   
+@inproceedings{DBLP:conf/wsdm/BackstromL11,
+  author    = {Lars Backstrom and
+               Jure Leskovec},
+  title     = {Supervised random walks: predicting and recommending links
+               in social networks},
+  booktitle = {WSDM},
+  year      = {2011},
+  pages     = {635-644},
+  ee        = {http://doi.acm.org/10.1145/1935826.1935914},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+@inproceedings{DBLP:conf/www/Haveliwala02,
+  author    = {Taher H. Haveliwala},
+  title     = {Topic-sensitive PageRank},
+  booktitle = {WWW},
+  year      = {2002},
+  pages     = {517-526},
+  ee        = {http://doi.acm.org/10.1145/511446.511513},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+@inproceedings{DBLP:conf/www/JehW03,
+  author    = {Glen Jeh and
+               Jennifer Widom},
+  title     = {Scaling personalized web search},
+  booktitle = {WWW},
+  year      = {2003},
+  pages     = {271-279},
+  ee        = {http://doi.acm.org/10.1145/775152.775191},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+@inproceedings{DBLP:conf/icdm/TongFP06,
+  author    = {Hanghang Tong and
+               Christos Faloutsos and
+               Jia-Yu Pan},
+  title     = {Fast Random Walk with Restart and Its Applications},
+  booktitle = {ICDM},
+  year      = {2006},
+  pages     = {613-622},
+  ee        = {http://doi.ieeecomputersociety.org/10.1109/ICDM.2006.70},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+@proceedings{DBLP:conf/sdm/2012,
+  title     = {Proceedings of the Twelfth SIAM International Conference
+               on Data Mining, Anaheim, California, USA, April 26-28, 2012},
+  booktitle = {SDM},
+  publisher = {SIAM / Omnipress},
+  year      = {2012},
+  isbn      = {978-1-61197-232-0},
+  ee        = {http://siam.omnibooksonline.com/2012datamining/},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+@inproceedings{DBLP:conf/www/Chakrabarti07,
+  author    = {Soumen Chakrabarti},
+  title     = {Dynamic personalized pagerank in entity-relation graphs},
+  booktitle = {WWW},
+  year      = {2007},
+  pages     = {571-580},
+  ee        = {http://doi.acm.org/10.1145/1242572.1242650},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+@inproceedings{DBLP:conf/kdd/LichtenwalterLC10,
+  author    = {Ryan Lichtenwalter and
+               Jake T. Lussier and
+               Nitesh V. Chawla},
+  title     = {New perspectives and methods in link prediction},
+  booktitle = {KDD},
+  year      = {2010},
+  pages     = {243-252},
+  ee        = {http://doi.acm.org/10.1145/1835804.1835837},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+
+@inproceedings{DBLP:conf/pakdd/CaiBKWKCM12,
+  author    = {Xiongcai Cai and
+               Michael Bain and
+               Alfred Krzywicki and
+               Wayne Wobcke and
+               Yang Sok Kim and
+               Paul Compton and
+               Ashesh Mahidadia},
+  title     = {Reciprocal and Heterogeneous Link Prediction in Social Networks},
+  booktitle = {PAKDD (2)},
+  year      = {2012},
+  pages     = {193-204},
+  ee        = {http://dx.doi.org/10.1007/978-3-642-30220-6_17},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+@inproceedings{DBLP:conf/ausai/CaiBKWKCM10,
+  author    = {Xiongcai Cai and
+               Michael Bain and
+               Alfred Krzywicki and
+               Wayne Wobcke and
+               Yang Sok Kim and
+               Paul Compton and
+               Ashesh Mahidadia},
+  title     = {Collaborative Filtering for People to People Recommendation
+               in Social Networks},
+  booktitle = {Australasian Conference on Artificial Intelligence},
+  year      = {2010},
+  pages     = {476-485},
+  ee        = {http://dx.doi.org/10.1007/978-3-642-17432-2_48},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+@inproceedings{DBLP:conf/asunam/DavisLC11,
+  author    = {Darcy A. Davis and
+               Ryan Lichtenwalter and
+               Nitesh V. Chawla},
+  title     = {Multi-relational Link Prediction in Heterogeneous Information
+               Networks},
+  booktitle = {ASONAM},
+  year      = {2011},
+  pages     = {281-288},
+  ee        = {http://dx.doi.org/10.1109/ASONAM.2011.107},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@article{journals/bioinformatics/PrzuljCJ04,
+  added-at = {2005-01-14T00:00:00.000+0100},
+  author = {Przulj, Natasa and Corneil, Derek G. and Jurisica, Igor},
+  biburl = {http://www.bibsonomy.org/bibtex/2252032864aa2b041baa68f7d8934402b/dblp},
+  date = {2005-01-14},
+  description = {dblp},
+  ee = {http://dx.doi.org/10.1093/bioinformatics/bth436},
+  interhash = {a0e818e84447f74a84d2f05a8f9b7be0},
+  intrahash = {252032864aa2b041baa68f7d8934402b},
+  journal = {Bioinformatics},
+  keywords = {dblp},
+  number = 18,
+  pages = {3508-3515},
+  timestamp = {2005-01-14T00:00:00.000+0100},
+  title = {Modeling interactome: scale-free or geometric?.},
+  url = {http://dblp.uni-trier.de/db/journals/bioinformatics/bioinformatics20.html#PrzuljCJ04},
+  volume = 20,
+  year = 2004
+}
+@inproceedings{DBLP:conf/cikm/Liben-NowellK03,
+  author    = {David Liben-Nowell and
+               Jon M. Kleinberg},
+  title     = {The link prediction problem for social networks},
+  booktitle = {12th ACM International Conference on Information and Knowledge Management},
+  year      = {2003},
+  pages     = {556-559},
+  ee        = {http://doi.acm.org/10.1145/956863.956972},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+
+@incollection{DBLP:conf/alt/Han09,
+year={2009},
+isbn={978-3-642-04746-6},
+booktitle={Discovery Science},
+volume={5808},
+series={Lecture Notes in Computer Science},
+editor={Gama, Jo?o and Costa, V??torSantos and Jorge, Al??pioM??rio and Brazdil, PavelB.},
+doi={10.1007/978-3-642-04747-3_2},
+title={Mining Heterogeneous Information Networks by Exploring the Power of Links},
+url={http://dx.doi.org/10.1007/978-3-642-04747-3_2},
+publisher={Springer Berlin Heidelberg},
+author={Han, Jiawei},
+pages={13-30}
+}
+
+
+@inbook{eskandanian2019power,
+author = {Eskandanian, Farzad and Sonboli, Nasim and Mobasher, Bamshad},
+title = {Power of the Few: Analyzing the Impact of Influential Users in Collaborative Recommender Systems},
+year = {2019},
+isbn = {9781450360210},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3320435.3320464},
+booktitle = {Proceedings of the 27th ACM Conference on User Modeling, Adaptation and Personalization},
+pages = {225–233},
+numpages = {9}
+}
+
+
+@inproceedings{mehrotra2020bandit,
+author = {Mehrotra, Rishabh and Xue, Niannan and Lalmas, Mounia},
+title = {Bandit Based Optimization of Multiple Objectives on a Music Streaming Platform},
+year = {2020},
+isbn = {9781450379984},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3394486.3403374},
+doi = {10.1145/3394486.3403374},
+booktitle = {Proceedings of the 26th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
+pages = {3224–3233},
+numpages = {10},
+location = {Virtual Event, CA, USA},
+series = {KDD '20}
+}
+
