--- a/refs_libauto.bib
+++ b/refs_libauto.bib
@@ -1,4 +1,5 @@
-
+% This file was created with JabRef 2.5.
+% Encoding: Cp1252
 
 @article{Ekstrand_2020,
    title={LensKit for Python: Next-Generation Software for Recommender Systems Experiments},
